--- a/Confirmation.html
+++ b/Confirmation.html
@@ -27,6 +27,7 @@
                     <br>
                     <br>
                     <br>
+                    <a class="btn btn-secondary rounded-pill border border-white" href="https://www.google.com/maps/search/bike+repair/13z/data=!3m1!4b1" role="button">Get Directions</a>
                     <a class="btn btn-secondary rounded-pill border border-white" href="index.html" role="button">Go Back</a>
                 </div>
             </div>
