--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+              <a class="nav-link text-white" href="index.html">Home </a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="Services.html">Services</a>
@@ -76,86 +76,101 @@
               </p>
             </div>
           </div>
-          <div class="row justify content-center">
-            <div class="row-md-3 text-center">
-              <img src="/assets/Bikes.jpg" alt="Bike Image">
-            </div>
-          </div>
-        </div>
       </section>
-      
-      <section id="Reviews" class="bg-primary ">
-       <h1 class="text-center text-white">Top Reviews</h1> 
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <div class="container-lg padding">
+        <div class="g-0 align-items-center justify-content-center position-absolute start-50 translate-middle">
+            <div class="card text-center justify-content-center shadow-lg  bg-body rounded border border-primary" style="width: 60rem;">
+                <div class="card-body bg-primary"> 
+                    <img src="assets/Bikes.jpg" class="card-img-top " alt="..."> 
+                </div>
+            </div>
+        </div>
+      </div>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <section id="Reviews">
+       <h1 class="text-center ">Top Reviews</h1> 
         <div class="container-lg">
-          <div class="row my-5 g-0 align-items-center justify-content-center">
-            <div class="card" style="width: 18rem;" style="height: 18rem;">
-              <img src="assets/5stars.jpg" class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is the best bike repair shop in the world.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+          <div class="row my-5 g-0 align-items-center justify-content-center ">
+            <div class="card border-0" style="width: 18rem;" style="height: 18rem;">
+              <img src="assets/5stars.jpg" class="card-img-top w-50" alt="...">
+              <div class="card-body bg-primary">
+                <h5 class="card-title text-white">John Weston</h5>
+                <p class="card-text text-white">This is the best bike repair shop in the world.</p>
               </div>
             </div>
-            <div class="card" style="width: 18rem;" style="height: 18rem;">
-              <img src="assets/5stars.jpg" class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is the best bike repair shop in the world.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+            <div class="card  border-0 mx-3" style="width: 18rem;" style="height: 18rem;">
+              <img src="assets/5stars.jpg" class="card-img-top w-50" alt="...">
+              <div class="card-body bg-primary ">
+                <h5 class="card-title text-white">Bill Watersworth</h5>
+                <p class="card-text text-white">I got my bike repaired here and it now works better than before.</p>
               </div>
             </div>
-            <div class="card" style="width: 18rem;" style="height: 18rem;">
-              <img src="assets/5stars.jpg" class="card-img-top" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is the best bike repair shop in the world.</p>
-                <a href="#" class="btn btn-primary">View More Reivews</a>
+            <div class="card border-0" style="width: 18rem;" style="height: 18rem;">
+              <img src="assets/5stars.jpg" class="card-img-top w-50" alt="...">
+              <div class="card-body bg-primary">
+                <h5 class="card-title text-white">Edward Johnson</h5>
+                <p class="card-text text-white">Great prices for great service! Hightly recommend!</p>
               </div>
             </div>
           </div>
         </div>
+
+
         <div class="container-lg">
-          <div class="row">
-            <div class="col position-absolute start-0">
-              <button>Write A Review</button>
-            </div>
-            <div class="col">
-              <button>View More Reviews</button>
+          <div class="row my-5 align-items-center">
+            <div class="col  text-center ">
+              <button type="button" class="btn btn-primary rounded-pill border border-white" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                Write A Review
+              </button>
+              
+              <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal-dialog">
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <h5 class="modal-title" id="exampleModalLabel">Write a review</h5>
+                    </div>
+                    <div class="modal-body">
+                      <form>
+                        <div class="mb-3">
+                          <input type="text" class="form-control" id="Name" placeholder="Name">
+                        </div>
+                        <div class="mb-3">
+                          <textarea class="form-control" aria-label="With textarea" placeholder="What do you want to say?"></textarea>
+                        </div>
+                      </form>
+                    </div>
+                    <div class="modal-footer">
+                      <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                      <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Post</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
       </section>
 
-      <!-- Button trigger modal -->
-<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-  Launch demo modal
-</button>
 
-<!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Write a review</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-        <form>
-          <div class="mb-3">
-            <input type="text" class="form-control" id="Name" placeholder="Name">
-          </div>
-          <div class="mb-3">
-            <textarea class="form-control" aria-label="With textarea" placeholder="What do you want to say?"></textarea>
-          </div>
-        </form>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Post</button>
-      </div>
-    </div>
-  </div>
-</div>
 
 </body>
 </html>
